--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,7 @@
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.1" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
   <package id="MySql.Data" version="8.4.0" targetFramework="net472" />
   <package id="MySqlConnector" version="2.3.7" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
